--- a/assets/templates/partials/data-filters/updated-filter.tmpl
+++ b/assets/templates/partials/data-filters/updated-filter.tmpl
@@ -1,4 +1,5 @@
-<details class="ons-collapsible ons-js-collapsible ons-collapsible--accordion" data-group="accordion" data-btn-close="Hide this" data-open="true">
+<details class="ons-collapsible ons-js-collapsible ons-collapsible--accordion" data-group="accordion"
+    data-btn-close="Hide this" data-open="true">
     <summary class="ons-collapsible__heading ons-js-collapsible-heading">
         <h2 class="ons-collapsible__title">
             <legend class="block">
@@ -15,7 +16,8 @@
                 <label class="hidden" for="select-wide">
                     {{ localise "Updated" . 4 }}
                 </label>
-                <select id="lastUpdatedSelect" name="select" class="ons-input ons-input--select ons-input--block updated-select">
+                <select id="lastUpdatedSelect" name="select"
+                    class="ons-input ons-input--select ons-input--block updated-select">
                     <option value="select" selected>{{ localise "SelectLastUpdated" . 1 }}</option>
                     <option value="today">{{ localise "Today" . 1 }}</option>
                     <option value="week">{{ localise "LastSevenDays" . 1 }}</option>
