--- a/assets/templates/partials/data-filters/date-filter.tmpl
+++ b/assets/templates/partials/data-filters/date-filter.tmpl
@@ -1,6 +1,10 @@
 {{ $lang := .Language }}
+{{ $enabledTimeSeriesExport := .Data.EnableTimeSeriesExport }}
 
-<details class="ons-collapsible ons-js-collapsible ons-collapsible--accordion" data-group="accordion" data-btn-close="Hide this" data-open="true">
+<!-- Hide date input in the timeseries so it can be shown programmatically when needed -->
+<details id="dateFilters"
+    class="{{ if $enabledTimeSeriesExport }} hidden {{ end }} ons-collapsible ons-js-collapsible ons-collapsible--accordion"
+    data-group="accordion" data-btn-close="Hide this" data-open="true">
     <summary class="ons-collapsible__heading ons-js-collapsible-heading">
         <h2 class="ons-collapsible__title">
             <legend class="block">
@@ -16,21 +20,27 @@
             {{ localise "ReleasedAfter" $lang 1 }}
         </legend>
         <div class="inputs-released-after tiles__item tiles__item--nav-type flush-col hide--sm print--hide">
-                <p class="ons-panel__error hidden inputs-released-after-error">
-                    <strong class="inputs-released-after-error-text"></strong>
-                </p>
-                <div class="tiles__content tiles__content--nav ons-grid__col ons-col-3@m flush--padding from-date-filters">
-                    <label for="fromDateDay">{{ localise "Day" $lang 1 }}</label>
-                    <input type="text" id="fromDateDay" class="ons-input ons-input--text ons-input-type__input ons-input-number--w-2 js-auto-submit__input" name="fromDateDay" min="1" max="31" maxlength="2" pattern="[0-9]*" inputmode="numeric" value="">
-                </div>
-                <div class="tiles__content tiles__content--nav ons-grid__col ons-col-3@m flush--padding from-date-filters">
-                    <label for="fromDateMonth">{{ localise "Month" $lang 1 }}</label>
-                    <input type="text" id="fromDateMonth" class="ons-input ons-input--text ons-input-type__input ons-input-number--w-2 js-auto-submit__input" name="fromDateMonth" min="1" max="12" maxlength="2" pattern="[0-9]*" inputmode="numeric" value="">
-                </div>
-                <div class="tiles__content tiles__content--nav ons-grid__col ons-col-3@m flush--padding from-date-filters">
-                    <label for="fromDateYear">{{ localise "Year" $lang 1 }}</label>
-                    <input type="number" autocomplete="off" name="fromDateYear" id="fromDateYear" value="" class="ons-input ons-input--text ons-input-type__input ons-input-number--w-4" min="1900" max="2050" maxlength="4" pattern="[0-9]*">
-                </div>
+            <p class="ons-panel__error hidden inputs-released-after-error">
+                <strong class="inputs-released-after-error-text"></strong>
+            </p>
+            <div class="tiles__content tiles__content--nav ons-grid__col ons-col-3@m flush--padding from-date-filters">
+                <label for="fromDateDay">{{ localise "Day" $lang 1 }}</label>
+                <input type="text" id="fromDateDay"
+                    class="ons-input ons-input--text ons-input-type__input ons-input-number--w-2 js-auto-submit__input"
+                    name="fromDateDay" min="1" max="31" maxlength="2" pattern="[0-9]*" inputmode="numeric" value="">
+            </div>
+            <div class="tiles__content tiles__content--nav ons-grid__col ons-col-3@m flush--padding from-date-filters">
+                <label for="fromDateMonth">{{ localise "Month" $lang 1 }}</label>
+                <input type="text" id="fromDateMonth"
+                    class="ons-input ons-input--text ons-input-type__input ons-input-number--w-2 js-auto-submit__input"
+                    name="fromDateMonth" min="1" max="12" maxlength="2" pattern="[0-9]*" inputmode="numeric" value="">
+            </div>
+            <div class="tiles__content tiles__content--nav ons-grid__col ons-col-3@m flush--padding from-date-filters">
+                <label for="fromDateYear">{{ localise "Year" $lang 1 }}</label>
+                <input type="number" autocomplete="off" name="fromDateYear" id="fromDateYear" value=""
+                    class="ons-input ons-input--text ons-input-type__input ons-input-number--w-4" min="1900" max="2050"
+                    maxlength="4" pattern="[0-9]*">
+            </div>
         </div>
     </fieldset>
 
@@ -44,15 +54,21 @@
             </p>
             <div class="tiles__content tiles__content--nav ons-grid__col ons-col-3@m flush--padding to-date-filters">
                 <label for="toDateDay">{{ localise "Day" $lang 1 }}</label>
-                <input type="number" autocomplete="off" name="toDateDay" id="toDateDay" value="" class="ons-input ons-input--text ons-input-type__input ons-input-number--w-2" min="0" max="31" pattern="[0-9]*">
+                <input type="number" autocomplete="off" name="toDateDay" id="toDateDay" value=""
+                    class="ons-input ons-input--text ons-input-type__input ons-input-number--w-2" min="0" max="31"
+                    pattern="[0-9]*">
             </div>
             <div class="tiles__content tiles__content--nav ons-grid__col ons-col-3@m flush--padding to-date-filters">
                 <label for="toDateMonth">{{ localise "Month" $lang 1 }}</label>
-                <input type="number" autocomplete="off" name="toDateMonth" id="toDateMonth" value="" class="ons-input ons-input--text ons-input-type__input ons-input-number--w-2" min="1" max="12" maxlength="2" pattern="[0-9]*">
+                <input type="number" autocomplete="off" name="toDateMonth" id="toDateMonth" value=""
+                    class="ons-input ons-input--text ons-input-type__input ons-input-number--w-2" min="1" max="12"
+                    maxlength="2" pattern="[0-9]*">
             </div>
             <div class="tiles__content tiles__content--nav ons-grid__col ons-col-3@m flush--padding to-date-filters">
                 <label for="toDateYear">{{ localise "Year" $lang 1 }}</label>
-                <input type="number" autocomplete="off" name="toDateYear" id="toDateYear" value="" class="ons-input ons-input--text ons-input-type__input ons-input-number--w-4" min="1900" max="2050" maxlength="4" pattern="[0-9]*">
+                <input type="number" autocomplete="off" name="toDateYear" id="toDateYear" value=""
+                    class="ons-input ons-input--text ons-input-type__input ons-input-number--w-4" min="1900" max="2050"
+                    maxlength="4" pattern="[0-9]*">
             </div>
         </div>
     </fieldset>
