--- a/assets/templates/data-aggregation-page.tmpl
+++ b/assets/templates/data-aggregation-page.tmpl
@@ -5,9 +5,9 @@
   <div class="ons-grid">
     <div class="ons-grid__col ons-col-12@m">
       <section class="search__summary">
-        <span class="search__summary__generic">
-          {{ localise .Title.LocaliseKeyName $lang 1 }}
-        </span>
+        <h1 class="ons-u-fs-xxxl">
+          {{- localise .Title.LocaliseKeyName $lang 1 }}
+        </h1>
         {{ if $enabledHomeSwitch }}
           {{ template "partials/home-switch" . }}
         {{ end }}
