Remove archive message from mobile

--- a/assets/templates/data-aggregation-page.tmpl
+++ b/assets/templates/data-aggregation-page.tmpl
@@ -24,7 +24,7 @@
         <div class="search__filter__content">
           {{ template "partials/data-aggregation-filters" . }}
         </div>
-        <div class="search__filter__content">
+        <div class="search__filter__content hide--sm">
           {{ template "partials/archived-release-message" . }}
         </div>
       </section>
