--- a/assets/templates/partials/archived-release-message.tmpl
+++ b/assets/templates/partials/archived-release-message.tmpl
@@ -15,7 +15,7 @@
                 </summary>
                 <fieldset class="ons-collapsible__content ons-js-details-content ons-u-mb-s">
                     <legend class="ons-u-vh">{{ localise "SelectContentType" $lang 1 }}</legend>
-                        <div class="tiles__item tiles__item--nav-type flush-col hide--sm print--hide">
+                        <div class="tiles__item tiles__item--nav-type flush-col print--hide">
                             <div class="tiles__content tiles__content--nav">
                                 <p>
                                     {{ localise "NationalArchives" $lang 1 | safeHTML}}
