Show updated and keyword inputs on mobile menu

--- a/assets/templates/partials/data-filters/keywords-filter.tmpl
+++ b/assets/templates/partials/data-filters/keywords-filter.tmpl
@@ -10,7 +10,7 @@
         </span>
     </summary>
     <fieldset class="ons-collapsible__content ons-js-details-content ons-u-mb-s">
-            <div class="tiles__item tiles__item--nav-type flush-col hide--sm print--hide">
+            <div class="tiles__item tiles__item--nav-type flush-col print--hide">
                 <div class="tiles__content tiles__content--nav content-type-filter">
                     <label class="ons-label ons-u-pb-xs ons-u-fw-n" for="keywords">{{ localise "SearchKeywords" . 1 }}</label>
                     <div class="ons-compact-search">
