--- a/assets/templates/partials/data-filters/updated-filter.tmpl
+++ b/assets/templates/partials/data-filters/updated-filter.tmpl
@@ -11,7 +11,7 @@
         </span>
     </summary>
     <fieldset class="ons-collapsible__content ons-js-details-content ons-u-mb-s">
-        <div class="tiles__item tiles__item--nav-type flush-col hide--sm print--hide">
+        <div class="tiles__item tiles__item--nav-type flush-col print--hide">
             <div class="tiles__content tiles__content--nav">
                 <label class="hidden" for="select-wide">
                     {{ localise "Updated" . 4 }}
