--- a/assets/templates/partials/data-filters/keywords-filter.tmpl
+++ b/assets/templates/partials/data-filters/keywords-filter.tmpl
@@ -1,8 +1,10 @@
+{{ $lang := .Language }}
+
 <details class="ons-collapsible ons-js-collapsible ons-collapsible--accordion" data-group="accordion" data-btn-close="Hide this" data-open="true">
     <summary class="ons-collapsible__heading ons-js-collapsible-heading">
         <h2 class="ons-collapsible__title">
             <legend class="block">
-                {{ localise "Search" . 1 }}
+                {{ localise "Search" $lang 1 }}
             </legend>
         </h2>
         <span class="ons-collapsible__icon">
@@ -12,7 +14,7 @@
     <fieldset class="ons-collapsible__content ons-js-details-content ons-u-mb-s">
             <div class="tiles__item tiles__item--nav-type flush-col print--hide">
                 <div class="tiles__content tiles__content--nav content-type-filter">
-                    <label class="ons-label ons-u-pb-xs ons-u-fw-n" for="keywords">{{ localise "SearchKeywords" . 1 }}</label>
+                    <label class="ons-label ons-u-pb-xs ons-u-fw-n" for="keywords">{{ localise "SearchKeywords" $lang 1 }}</label>
                     <div class="ons-compact-search">
                         <input
                         type="search"
@@ -20,7 +22,7 @@
                         class="ons-compact-search__input js-auto-submit__input"
                         id="keywords"
                         name="q"
-                        value="">
+                        value="{{ .Data.Query }}">
                     </div>
                 </div>
             </div>
@@ -28,7 +30,7 @@
     <noscript>
         <button type="submit"
                 class="ons-btn ons-btn--primary margin-top-sm--2 margin-top-md--2 js-submit-button">
-                <span class="ons-btn__inner"><span class="ons-btn__text"> {{ localise "Filter" . 4 }}</span></span>
+                <span class="ons-btn__inner"><span class="ons-btn__text"> {{ localise "Filter" $lang 4 }}</span></span>
         </button>
     </noscript>
 </details>
