--- a/assets/templates/partials/data-filters/updated-filter.tmpl
+++ b/assets/templates/partials/data-filters/updated-filter.tmpl
@@ -1,9 +1,11 @@
+{{ $lang := .Language }}
+
 <details class="ons-collapsible ons-js-collapsible ons-collapsible--accordion" data-group="accordion"
     data-btn-close="Hide this" data-open="true">
     <summary class="ons-collapsible__heading ons-js-collapsible-heading">
         <h2 class="ons-collapsible__title">
             <legend class="block">
-                {{ localise "LastUpdate" . 1 }}
+                {{ localise "LastUpdate" $lang 1 }}
             </legend>
         </h2>
         <span class="ons-collapsible__icon">
@@ -14,15 +16,15 @@
         <div class="tiles__item tiles__item--nav-type flush-col print--hide">
             <div class="tiles__content tiles__content--nav">
                 <label class="hidden" for="select-wide">
-                    {{ localise "Updated" . 4 }}
+                    {{ localise "Updated" $lang 4 }}
                 </label>
                 <select id="lastUpdatedSelect" name="select"
                     class="ons-input ons-input--select ons-input--block updated-select">
-                    <option value="select" selected>{{ localise "SelectLastUpdated" . 1 }}</option>
-                    <option value="today">{{ localise "Today" . 1 }}</option>
-                    <option value="week">{{ localise "LastSevenDays" . 1 }}</option>
-                    <option value="month">{{ localise "LastMonth" . 1 }}</option>
-                    <option value="custom">{{ localise "Custom" . 1 }}</option>
+                    <option value="select" selected>{{ localise "SelectLastUpdated" $lang 1 }}</option>
+                    <option value="today">{{ localise "Today" $lang 1 }}</option>
+                    <option value="week">{{ localise "LastSevenDays" $lang 1 }}</option>
+                    <option value="month">{{ localise "LastMonth" $lang 1 }}</option>
+                    <option value="custom">{{ localise "Custom" $lang 1 }}</option>
                 </select>
             </div>
         </div>
