--- a/assets/templates/time-series-tool.tmpl
+++ b/assets/templates/time-series-tool.tmpl
@@ -3,9 +3,9 @@
   <div class="ons-grid">
     <div class="ons-grid__col ons-col-12@m">
       <section class="search__summary">
-        <span class="search__summary__generic">
-          {{ localise "TimeSeriesExplorer" $lang 1 }}
-        </span>
+        <h1 class="ons-u-fs-xxxl">
+          {{- localise "TimeSeriesExplorer" $lang 1 -}}
+        </h1>
       </section>
     </div>
     <div class="ons-grid__col ons-col-4@m">
