Fix topic filter spacing

--- a/assets/templates/partials/data-filters/topic-filter.tmpl
+++ b/assets/templates/partials/data-filters/topic-filter.tmpl
@@ -14,7 +14,7 @@
                 {{ template "icons/chevron-right" }}
             </span>
         </summary>
-        <fieldset class="ons-fieldset">
+        <fieldset class="ons-fieldset ons-u-mb-s">
             <legend class="ons-u-vh">{{ localise "CensusTopic" $lang 1 }}</legend>
             {{ range $index, $topicFilter := $topicFilters }}
             <div class="ons-checkboxes__items">
