--- a/assets/templates/partials/data-filters/keywords-filter.tmpl
+++ b/assets/templates/partials/data-filters/keywords-filter.tmpl
@@ -14,23 +14,8 @@
     <fieldset class="ons-collapsible__content ons-js-details-content ons-u-mb-s">
             <div class="tiles__item tiles__item--nav-type flush-col print--hide">
                 <div class="tiles__content tiles__content--nav content-type-filter">
-                    <label class="ons-label ons-u-pb-xs ons-u-fw-n" for="keywords">{{ localise "SearchKeywords" $lang 1 }}</label>
-                    <div class="ons-compact-search">
-                        <input
-                        type="search"
-                        autocomplete="off"
-                        class="ons-compact-search__input js-auto-submit__input"
-                        id="keywords"
-                        name="q"
-                        value="{{ .Data.Query }}">
-                    </div>
+                    {{ template "partials/compact-search" .Data.KeywordFilter }}
                 </div>
             </div>
     </fieldset>
-    <noscript>
-        <button type="submit"
-                class="ons-btn ons-btn--primary margin-top-sm--2 margin-top-md--2 js-submit-button">
-                <span class="ons-btn__inner"><span class="ons-btn__text"> {{ localise "Filter" $lang 4 }}</span></span>
-        </button>
-    </noscript>
 </details>
